# sasctf-finals-2025

./: README.md
2girls1flag/: .gitignore  README.md
2girls1flag/checker/: cases.py  checker.py  config.py  requirements.txt  schemas.py  service_client.py  success_dataset.json
2girls1flag/checker/agents/: question.py  schemas.py  verifier.py
2girls1flag/service/: Dockerfile  docker-compose.yml  env_example  nginx.conf  requirements.txt
2girls1flag/service/app/: config.py  db.py  dependencies.py  main.py  models.py  redis_client.py  schemas.py  security.py
gatekeeper/: .gitignore  README.md
gatekeeper/checker/: README.md  checker.py  config.py  generate_programs.py  requirements.txt  run_local.py  service_client.py  testcase.py
gatekeeper/exploit/: build_qemu_escape_shellcode.sh  exploit-ciphertext-leak.py  exploit-qemu-escape.py  exploit-trusted-funcs-bof.py  exploit-type-confusion.py  exploit-verifier-non-symbolic-ret.py  ld_script.ld  qemu-escape-create-files.c  qemu-escape-main.c  qemu-escape-shellcode.c  qemu-escape-shellcode.h
gatekeeper/service/: docker-compose.yml
gatekeeper/sources/: README.md  qemu-v10.1.0.patch
gta-rp/: .gitignore  README.md
gta-rp/checker/: README.md  check.sh  index.ts  main.ts  package.json  tricks.d.ts  tricks.js
gta-rp/service/: db-init.sql  docker-compose.yml
gta-rp/service/AuthWiedersehen/: .dockerignore  .gitignore  Dockerfile  auth.cabal  index.html
gta-rp/service/AuthWiedersehen/src/: AppContext.hs  AuthRoutes.hs  AuthServiceImpl.hs  MCCrypto.hs  Main.hs  Models.hs  RedisService.hs  RootRoute.hs  SessionRoutes.hs  Utils.hs
onlychess/: README.md
onlychess/checker/: check.py  client.py  config.py  gamer.py
onlychess/exploit/: crypto_exploit.py
onlychess/service/: Dockerfile  compose.yaml  go.mod  go.sum
(+193 files in other folders)
