cabal-version:      3.0
name:               auth
version:            0.1.0.0
description:        Yggdrasil authentication server
build-type:         Simple

executable auth
    hs-source-dirs: src
    main-is:            Main.hs
    build-depends:      cryptonite ^>=0.30,
                        cryptostore >= 0.3,
                        x509 >= 1.7,
                        random ^>=1.3.1,
                        time ^>=1.12.2,
                        base >= 4.7 && < 5,
                        wai >= 3.2,
                        warp >= 3.3,
                        http-types >= 0.12,
                        bytestring >= 0.10,
                        aeson >= 2.0,
                        text >= 1.2,
                        uuid >= 1.3,
                        lens >= 5.0,
                        generic-lens >= 1.0,
                        postgresql-simple >= 0.6 && < 0.7,
                        mtl >= 2.2,
                        transformers >= 0.5,
                        bcrypt >= 0.0.11,
                        random >= 1.2,
                        pureMD5 >= 0.2,
                        OTP >= 0.1,
                        base32 >= 0.4,
                        base64-bytestring >= 1.2,
                        directory >= 1.3,
                        process >= 1.6, 
                        byteable >= 0.1,
                        memory >= 0.18,
                        RSA >= 2.4,
                        crypto-pubkey-types >= 0.4,
                        hedis >= 0.15,
                        MonadRandom >= 0.6,
                        regex-tdfa >= 1.3.2,
                        unix >= 2.8.0.0
    default-language:   Haskell2010
